# Spekter

./: CMakeLists.txt
src/: main.cpp
src/tokenizer/: character_iterator.cpp  character_iterator.h  conditional_character_gatherer.cpp  conditional_character_gatherer.h  escape_sequence_parser.cpp  escape_sequence_parser.h  file_tokenizer.cpp  file_tokenizer.h  quick_token_creator.cpp  quick_token_creator.h  string_literal_gatherer.cpp  string_literal_gatherer.h  tokenizer.cpp  tokenizer.h
src/tokenizer/tokens/: token.cpp  token.h  token_type.h
